Some more warnings cleanup